style.css
body {
  font: 100%/1.5 system-ui;
  max-width: 100ch;
  margin-inline: auto;
  padding: 1rem;
}

html {
  --color-accent: oklch(65% 50% 0);
  accent-color: var(--color-accent);
  color-scheme: light dark;
}

img {
  max-width: 100%;
  height: auto;
}

nav {
  display: flex;
  margin-bottom: 2rem;
  --border-color: oklch(50% 10% 200 / 40%);
  border-bottom: 1px solid var(--border-color);
}

nav a {
  flex: 1;
  text-decoration: none;
  color: inherit;
  text-align: center;
  padding: 0.5em;
}

nav a.current {
  border-bottom: 0.4em solid var(--border-color);
  padding-bottom: 0.1em;
}

nav a:hover {
  border-bottom: 0.4em solid var(--color-accent);
  padding-bottom: 0.1em;
  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
}

input,
textarea,
button,
select {
  font: inherit;
}

form {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 1em;
}

form label {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
}

form button {
  grid-column: 1 / -1;
  width: fit-content;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
  gap: 1em;
}


.projects article {
  display: grid;
  grid-template-rows: subgrid;
  grid-row: span 4;
  gap: 1em;
}

.projects h2 {
  margin: 0;
}

h1 {
  font-size: 400%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.1;
  text-wrap: balance;
}

iframe {
  border: 1px solid oklch(80% 3% 200);
  border-radius: 8px;
}

.color-scheme {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 80%;
}

html {
  --color-accent: oklch(65% 50% 0);
  accent-color: var(--color-accent);
  color-scheme: light dark;
}

#profile-stats dl {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  text-align: center;
  gap: 1rem;
}

#profile-stats dt {
  grid-row: 1;
  font-weight: bold;
}

#profile-stats dd {
  grid-row: 2;
  margin: 0;
}

